@@ -1,5 +1,8 @@
 2006-01-26  Jb Evain  <jbevain@gmail.com>
 
+	* Mono.Cecil/CustomAttribute.cs:
+		Fix cloning of non readable attributes.
+
 	* Mono.Cecil/ReflectionReader.cs
 	  Mono.Cecil/ReflectionWriter.cs
 	  Mono.Cecil.Signatures/MethodRefSig.cs
